# picture-directory

./: .gitignore  Main.hs  README.md  app.hs  directory.cabal  start
Directory/: Data.hs  Google.hs  Views.hs
public/: index.html
public/css/: print.css  style.css
public/js/: googleForm.js
